# DocSearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  env.yml  example_usage.py  pyproject.toml  test_dataclass_integration.py  test_updated_encode_image.py
.github/scripts/: workflow_delete_release.py  workflow_update_release_body.py
.github/workflows/: release_pr.yml
docrag/core/: document.py  page.py  page_element.py  utils.py
docs/source/: conf.py
docsearch/: __init__.py  add_metadata.py  doc_processor.py  doc_search.py  download.py  figure_extraction.py  image_processing.py  llm_models.py  llm_processing.py  log.py  main.py  pdf_parse.py  pdf_processing.py  utils.py  vector_store.py
docsearch/core/: __init__.py  caption.py  data.py  doc_search.py  document.py  figure.py  formula.py  page.py  page_layout.py  table.py
docsearch/utils/: log_utils.py
examples/: 01-Getting Started.ipynb  index.rst
examples/notebooks/: Example 1 - Getting Started.ipynb
examples/sandbox/: data_model.ipynb  gemini.ipynb  page_model.ipynb  phi_docs.ipynb  test_doc_layout.py  test_docsearch.py  test_page_model.py  test_pdf.py
examples/sandbox/data/samples/sample_1/sample_1/: extraction_summary.json
examples/sandbox/data/samples/sample_1/sample_1/figure/: metadata.json
examples/sandbox/data/samples/sample_1/sample_1/plain-text/: metadata.json
examples/sandbox/data/samples/sample_1/sample_1/table/: metadata.json
tests/: test_page.py  utils.py
